--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.8.2",
     "react": "16.6.3",
     "react-native": "0.57.8"
   },
