--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.8.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
