--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "native-base": "^2.8.2",
     "npm": "^6.5.0",
     "react": "16.6.3",
-    "react-native": "0.57.7",
+    "react-native": "0.57.8",
     "react-native-app-link": "^1.0.0",
     "react-native-config": "^0.11.7",
+    "react-native-extra-dimensions-android": "^1.0.0",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-modal": "^7.0.2",
     "react-native-vector-icons": "^6.1.0",
