--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-extra-dimensions-android')
     compile project(':react-native-config')
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
